--- a/update.html
+++ b/update.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"/>
-  <link rel="stylesheet" href="/css/style.css" />
+  <link rel="stylesheet" href="./css/style.css" />
   <title>CRUD</title>
 </head>
 <body>
@@ -18,6 +18,6 @@
     <button class="btn btn-outline-success" onclick="updateStudent()">Update</button>
   </section>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="/js/update.js"></script>
+  <script src="./js/update.js"></script>
 </body>
 </html>
